Bug 486825 - Error transferring https://social.opendesktop.org/api/v1/push/subscription - server replied: . Please check your settings.
Summary: Error transferring https://social.opendesktop.org/api/v1/push/subscription - ...
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-09 23:35 UTC by Justin Zobel
Modified: 2024-07-06 16:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2024-05-09 23:35:32 UTC
I get this message when I open Tokodon, it doesn't seem to impede any functions, not that I use any functions really... 

Failed to contact server: "Error transferring https://social.opendesktop.org/api/v1/push/subscription - server replied: . Please check your settings."

I can open that URL in my browser, and it returns JSON with The access token is invalid so it's a valid URL and endpoint for Tokodon to talk to, just not liking the response I guess?
Comment 1 Bug Janitor Service 2024-07-06 16:28:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/tokodon/-/merge_requests/517
Comment 2 Joshua Goins 2024-07-06 16:29:11 UTC
Yes this is a harmless error but we really shouldn't print it as it's normal to get a 404 there. This goes for a whole lot of other cases as well, so let's axe the log notification when we handle it explicitly.
Comment 3 Joshua Goins 2024-07-06 16:37:53 UTC
Git commit 1cc98dbf3f94467e1ff445d16e0dde473a13687a by Joshua Goins.
Committed on 06/07/2024 at 16:28.
Pushed by redstrate into branch 'master'.

Only print out HTTP warnings for errors we don't explicitly handle

So when we make HTTP requests, by default we don't handle errors. Doing
so requires setting another callback to handle errors specifically.
We also print out a warning saying a URL 404'd and such so users can
report server errors we maybe should or shouldn't handle.

In some cases this backfires, causing errors to be printed out even if
we handle those error cases specifically. A good example is unified push
support, where we prod the server (who will return a 404 if we don't
have permissions) and this clogs up the logs. Now we consider any
explicit error callback to be considered handled and no longer print an
error in the log.

M  +1    -1    src/account/account.cpp

https://invent.kde.org/network/tokodon/-/commit/1cc98dbf3f94467e1ff445d16e0dde473a13687a